--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,14 @@
 language: python
+sudo: required
 python: 
-  - "3.9"
+  - '3.9'
+# python: 
+#   - name: "Python 3.9 on macOS"
+#     os: osx
+#     osx_image: xcode12.5.1
+#     language: shell
+before_install:
+  - sudo python3 get-pip.py
 install:  # 安装依赖, 指定安装脚本， 可多个; 若某个cmd构建失败，都会停下来；若不需要安装，跳过直接设置install: true
   - pip3 install boto3 --user
 script:   # 运行脚本，指定构建或测试脚本，可多个；
