--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ before_install:
   - sudo python3 get-pip.py
 install:  # 安装依赖, 指定安装脚本， 可多个; 若某个cmd构建失败，都会停下来；若不需要安装，跳过直接设置install: true
   - pip3 install boto3 --user
+  - sudo gem install fastlane
 branches:
   only:
     - master
