--- a/.travis.yml
+++ b/.travis.yml
@@ -2,23 +2,22 @@ language: python
 sudo: required
 jobs:
   include:
-  - name: Python 3.9 on macOS
-    os: osx
-    osx_image: xcode12.5.1
-    language: shell
-before_install:
-- python3 --version
-- curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py
-- sudo python3 get-pip.py
-install:
-- pip3 install boto3 --user
-- sudo gem install fastlane
+    - name: "Python 3.9 on macOS"
+      os: osx
+      osx_image: xcode12.5.1
+      language: shell
+
+before_install: # 安装环境
+  - python3 --version
+  - curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py
+  - sudo python3 get-pip.py
+install:  # 安装依赖, 指定安装脚本， 可多个; 若某个cmd构建失败，都会停下来；若不需要安装，跳过直接设置install: true
+  - pip3 install boto3 --user
+  - sudo gem install fastlane
+  - sudo gem install cocoapods -v 1.10.1
 branches:
   only:
-  - master
-before_script:
-  - chmod +x ./scripts/add-key.sh 
-  - pod install
-script:
+    - master
+script:   # 运行脚本，指定构建或测试脚本，可多个；
+  - chmod +x ./scripts/add-key.sh
   - python3 ./travis.py
-
