--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,4 @@ branches:
   only:
   - master
 script:
-  # - python3 travis.py
-  - pod install
-  - chmod 777 scripts/archive.sh
+  - python3 travis.py
