--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_install:
   # 安装cocoapods
   - gem install cocoapods -v 1.10.1
   # 证书使用
-  - chmod 777 scripts/add-key.sh
+  # - chmod 777 scripts/add-key.sh
 install:
   # 安装aws3的依赖
   - pip3 install boto3 --user
