--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_install:
   # 安装cocoapods
   - gem install cocoapods -v 1.10.1
   # 证书使用
-  - chmod 777 ./add-key.sh
+  # - chmod 777 ./add-key.sh
 install:
   # 安装aws3的依赖
   - pip3 install boto3 --user
@@ -31,4 +31,4 @@ branches:
   - master
 script:
   - python3 travis.py
-  - chomd 777 ./remove-key.sh
+  # - chomd 777 ./remove-key.sh
