--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,8 @@ before_install:
   - gem install fastlane
   # 安装cocoapods
   - gem install cocoapods -v 1.10.1
+  # 设置keychain
+  - ./add-key.sh
 install:
   # 安装aws3的依赖
   - pip3 install boto3 --user
