--- a/.travis.yml
+++ b/.travis.yml
@@ -22,10 +22,7 @@ install:
 branches:
   only:
   - master
-before_script:
-- ./scripts/remove-key.sh
-- ./scripts/add-key.sh
 script:
 - python3 travis.py
-after_script:
-- ./scripts/remove_key.sh
+# after_script:
+# - ./scripts/remove_key.sh
