--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 language: objective-c
-osx_image: xcode9
+jobs:
+  include:
+  - name: Python 3.9 on macOS
+    os: osx
+    osx_image: xcode12
+    language: shell
 env:
   global:
   - APPNAME="travis"
