--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ before_install:
   - chmod +x scripts/add-key.sh
   - chmod +x scripts/build.sh
   - chmod +x scripts/remove-key.sh
+branches:
+  only:
+  - master
 before_script:
 - "./scripts/add-key.sh"
 script:
