--- a/.travis.yml
+++ b/.travis.yml
@@ -14,13 +14,15 @@ before_install:
   - chmod +x scripts/add-key.sh
   - chmod +x scripts/build.sh
   - chmod +x scripts/remove-key.sh
+install:
+  - sudo gem install fastlane --version "2.186.0"
 branches:
   only:
   - master
-before_script:
-- "./scripts/add-key.sh"
+# before_script:
+# - "./scripts/add-key.sh"
 script:
-- "./scripts/build.sh"
-after_script:
-- "./scripts/remove-key.sh"
+- fastlane beta_release
+# after_script:
+# - "./scripts/remove-key.sh"
 
